@@ -1,3 +1,9 @@
+2002-11-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03424] Content length
+	* file.c (loadGeneralFile): current_content_length before do_download
+		(save2tmp): current_content_length move before return
+
 2002-11-12  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03422] Re: setting form on loading
@@ -4595,4 +4601,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.506 2002/11/12 13:06:14 ukai Exp $
+$Id: ChangeLog,v 1.507 2002/11/13 15:47:12 ukai Exp $
